background added, overflow fixed, view tommorrow added but has bugs, icon animation on hover

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,3 +1,21 @@
+body {
+	overflow-x: hidden;
+	overflow-y: hidden;
+}
+
+.bg {
+	top: -30%;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	text-align: center;
+}
+
+#bgGif {
+	width: 105%;
+}
+
 .icon {
 	top: 1vh;
 	left: 1vw;
@@ -45,7 +63,13 @@
 }
 
 #emPic {
-	height: 100%;
+	margin-top: 5%;
+	height: 90%;
+	transition: transform .2s; /* Animation */
+}
+
+#emPic:hover {
+	transform: scale(1.05);
 }
 
 .trend {
@@ -58,7 +82,13 @@
 }
 
 #trendPic {
-	height: 100%;
+	margin-top: 5%;
+	height: 90%;
+	transition: transform .2s; /* Animation */
+}
+
+#trendPic:hover {
+	transform: scale(1.05);
 }
 
 .yesterday {
@@ -89,5 +119,22 @@
 }
 
 .tommorrow {
+	top: 40vh;
+	right: 1vw;
+	width: 30vw;
+	height: 10vh;
 	position: absolute;
+}
+
+#nextText {
+	width: 26vw;
+	height: 10vh;
+	float: right;
+}
+
+#nextPic {
+	right: 0;
+	margin-top: 20%;
+	height: 60%;
+	float: right;
 }
